[package]
name = "cks_accumulator"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Pairing based accumulator from the paper - An Accumulator Based on Bilinear Maps and Efficient Revocation for Anonymous Credentials"
license = "Apache-2.0"
repository = "https://github.com/lovesh/cks_accumulator"

[dependencies]
rand = "0.7"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.amcl_wrapper]
version = "0.1.7"
default-features = false
features = ["bls381"]

